@@ -2,6 +2,7 @@ Bugfixes are not included in this changelog. See github:
 https://github.com/resident-uhlig/chrome-hyperiums7/issues
 
 XXXX-XX-XX XX:XX:XX Version 0.0.7
+* Added information about deployed fleets
 
 2013-11-29 15:44:00 Version 0.0.6
 * Added Cache Overview
